@@ -53,7 +53,7 @@ and date object as \sQuote{Thu, 01 Sep 2016}.
 
 \section{RFC 3339}{
 
-RFC 3339 is described in some detail in \url{https://tools.ietf.org/html/rfc3339}
+RFC 3339 is described in some detail in \url{https://www.rfc-editor.org/rfc/rfc3339}
 It refines both earlier standards.
 
 Here, we use it to format datetimes and dates as single and compact strings.
@@ -85,7 +85,7 @@ yyyymmdd(anydate("2016-Sep-01"))
 \url{https://en.wikipedia.org/wiki/ISO_8601},
 \url{https://www.ietf.org/rfc/rfc2822.txt},
 \url{https://en.wikipedia.org/wiki/Email#Internet_Message_Format},
-\url{https://tools.ietf.org/html/rfc3339}
+\url{https://www.rfc-editor.org/rfc/rfc3339}
 }
 \author{
 Dirk Eddelbuettel
